<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Inicio">

    <item android:id="@+id/action_season" android:title="@string/seasons"
        android:orderInCategory="100" app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_autumn" android:title="Autumn"/>
                <item android:id="@+id/action_winter" android:title="Winter"/>
                <item android:id="@+id/action_spring" android:title="Spring"/>
                <item android:id="@+id/action_summer" android:title="Summer"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_level" android:title="@string/level"
        android:orderInCategory="100" app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_easy" android:title="Easy"/>
                <item android:id="@+id/action_medium" android:title="Medium"/>
                <item android:id="@+id/action_hard" android:title="Hard"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_Mine" android:title="@string/mine"
        android:orderInCategory="100" app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_mine_brown" android:title="Brown"/>
                <item android:id="@+id/action_mine_black" android:title="Black"/>
            </group>
        </menu>
    </item>
</menu>
